Updated linkedin link

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
   </div>
 
   <div class="social-links">
-    <a class="footer-link" href="https://www.linkedin.com/" target="_blank" id="linkedin"><img src="img/linkedin.png" alt="Linkedin"></a>
+    <a class="footer-link" href="https://www.linkedin.com/in/mohit-kumar-simha" target="_blank" id="linkedin"><img src="img/linkedin.png" alt="Linkedin"></a>
     <a class="footer-link" href="https://instagram.com/the_aiyaash_traveller/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a>
     <a class="footer-link" href="https://github.com/mohitmonk" target="_blank"><img src="img/github.png" alt="GitHub"></a>
 </div>
