--- a/index.html
+++ b/index.html
@@ -124,11 +124,17 @@
     </div>
     <!-- section 03 -->
     <div class="row" id="p2">
-      <a href="https://github.com/mohitmonk/SpotifyClone" target="_blank"><img src="img/2.png" alt=""></a>
+      <a href="https://mohitmonk.github.io/SpotifyClone/" target="_blank"><img src="img/2.png" alt=""></a>
 
       <h3>Spotify Clone</h3>
-      <p>Capturing life's adventures.</p>
+      <p>Everything in the Universe has a rhythm .</p>
     </div>
+    <div class="row" id="p3">
+      <a href="https://mohitmonk.github.io/ToDo-Application/" target="_blank"><img src="img/preview.png" alt=""></a>
+      <h3>To-Do Application</h3>
+      <p>Planning Daily Tasks saves a lot of Time.</p>
+ </div>
+
   </div>
 </section>
 <!-- End of Services Section -->
