Added some quotes and Links

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="home-text">
       <h5>Hello, I'm</h5>
       <h1>Mohit Kumar</h1>
-      <h6>a passionate <span>Front-End Developer</span> with a strong enthusiasm for creating innovative and efficient websites.</h6>
+      <h6>A passionate <span>Front-End Developer</span> with a strong enthusiasm for creating innovative and efficient websites.</h6>
       <a href="https://drive.google.com/file/d/1TdXNAiDc4NGjncn9y65pDMZe5t6Le-0J/view?usp=sharing" class="btn" target="_blank">Download CV</a>
       <a href="mailto:mohitkumarsinha1603@gmail.com" class="btn">Hire Me</a>
     </div>
@@ -111,8 +111,8 @@
     <div class="row" id="p1">
       <a href="https://github.com/mohitmonk/Payroll-Application" target="_blank"><img src="img/1.png" alt=""></a>
       <!-- <i class='bx bx-code-alt'></i> -->
-      <h3>Payroll Generator</h3>
-      <p>Crafting innovative and user-friendly websites with cutting-edge technologies.</p>
+      <h3>Payroll Application</h3>
+      <p>Payday Made Painless: Generate employees' pay stubs and bring joy to their day.</p>
     </div>
 
     <!-- service 02 -->
@@ -120,19 +120,19 @@
       <a href="https://mohitmonk.github.io/Monks-Table/"><img src="img/3.png" alt=""></a>
       <!-- <i class='bx bx-code-alt'></i> -->
       <h3>Resturant Website</h3>
-      <p>Crafting innovative and user-friendly websites with cutting-edge technologies.</p>
+      <p>Feast On, Stress Out: We've Got Your Delivery!.</p>
     </div>
     <!-- section 03 -->
     <div class="row" id="p2">
       <a href="https://mohitmonk.github.io/SpotifyClone/" target="_blank"><img src="img/2.png" alt=""></a>
 
       <h3>Spotify Clone</h3>
-      <p>Everything in the Universe has a rhythm .</p>
+      <p>Unleash Your Playlist Power: Dive into Infinite Tunes!</p>
     </div>
     <div class="row" id="p3">
       <a href="https://mohitmonk.github.io/ToDo-Application/" target="_blank"><img src="img/preview.png" alt=""></a>
       <h3>To-Do Application</h3>
-      <p>Planning Daily Tasks saves a lot of Time.</p>
+      <p>From Chaos to Clarity: Master Your Tasks Today!</p>
  </div>
 
   </div>
@@ -140,7 +140,7 @@
 <!-- End of Services Section -->
   <!-- CTA Section -->
   <section class="cta">
-    <h4>Let's make something great together!</h4>
+    <h4>Let's Create Excellence Together!</h4>
     <a href="mailto:mohitkumarsinha1603@gmail.com" class="btn">Hire Me</a>
   </section>
   <!-- End of CTA Section -->
