--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <li><a href="#about">About</a></li>
       <li><a href="#services">Services</a></li>
       <li><a href="#projects">Projects</a></li>
-      <li><a href="#resume">Resume</a></li>
+      <li><a href="https://drive.google.com/file/d/1jxqaaepjMPHU4SZyVIc3LGmTYIvu5rTA/view?usp=drive_link">Resume</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </header>
@@ -65,7 +65,7 @@
       <p>A creative and driven individual with a love for technology and a desire to make a positive impact through innovative web solutions.</p>
 
       <div class="main-btn">
-        <a href="https://drive.google.com/file/d/1TdXNAiDc4NGjncn9y65pDMZe5t6Le-0J/view?usp=sharing" class="btn" target="_blank">Download CV</a>
+        <a href="https://drive.google.com/file/d/1jxqaaepjMPHU4SZyVIc3LGmTYIvu5rTA/view?usp=drive_link" class="btn" target="_blank">Download CV</a>
       </div>
     </div>
   </section>
