Fixed Syme Typos

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h5>Hello, I'm</h5>
       <h1>Mohit Kumar</h1>
       <h6>A passionate <span>Front-End Developer</span> with a strong enthusiasm for creating innovative and efficient websites.</h6>
-      <a href="https://drive.google.com/file/d/1jxqaaepjMPHU4SZyVIc3LGmTYIvu5rTA/view?usp=sharing" class="btn" target="_blank">Download CV</a>
+      <a href="https://drive.google.com/file/d/1jxqaaepjMPHU4SZyVIc3LGmTYIvu5rTA/view?usp=sharing" class="btn" target="_blank">Download Resume</a>
       <a href="mailto:mohitkumarsinha1603@gmail.com" class="btn">Hire Me</a>
     </div>
 
@@ -65,7 +65,7 @@
       <p>A creative and driven individual with a love for technology and a desire to make a positive impact through innovative web solutions.</p>
 
       <div class="main-btn">
-        <a href="https://drive.google.com/file/d/1jxqaaepjMPHU4SZyVIc3LGmTYIvu5rTA/view?usp=drive_link" class="btn" target="_blank">Download CV</a>
+        <a href="https://drive.google.com/file/d/1jxqaaepjMPHU4SZyVIc3LGmTYIvu5rTA/view?usp=drive_link" class="btn" target="_blank">Download Resume</a>
       </div>
     </div>
   </section>
