--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <li><a href="#about">About</a></li>
       <li><a href="#services">Services</a></li>
       <li><a href="#projects">Projects</a></li>
-      <li><a href="https://drive.google.com/file/d/1ndCZQtb_lIfHEcUVBtaE17R8skJWCXqh/view?usp=sharing">Resume</a></li>
+      <li><a href="https://drive.google.com/file/d/1YqHuCRKTTxYHXoyDmQS0gV3GVBYVfc01/view?usp=drive_link">Resume</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </header>
@@ -43,7 +43,7 @@
       <h5>Hello, I'm</h5>
       <h1>Mohit Kumar</h1>
       <h6>A passionate <span>Front-End Developer</span> with a strong enthusiasm for creating innovative and efficient websites.</h6>
-      <a href="https://drive.google.com/file/d/1ndCZQtb_lIfHEcUVBtaE17R8skJWCXqh/view?usp=sharing" class="btn" target="_blank">Download Resume</a>
+      <a href="https://drive.google.com/file/d/1YqHuCRKTTxYHXoyDmQS0gV3GVBYVfc01/view?usp=drive_link" class="btn" target="_blank">Download Resume</a>
       <a href="mailto:mohitkumarsinha1603@gmail.com" class="btn">Hire Me</a>
     </div>
 
@@ -65,7 +65,7 @@
       <p>A creative and driven individual with a love for technology and a desire to make a positive impact through innovative web solutions.</p>
 
       <div class="main-btn">
-        <a href="https://drive.google.com/file/d/1ndCZQtb_lIfHEcUVBtaE17R8skJWCXqh/view?usp=sharing" class="btn" target="_blank">Download Resume</a>
+        <a href="https://drive.google.com/file/d/1YqHuCRKTTxYHXoyDmQS0gV3GVBYVfc01/view?usp=drive_link" class="btn" target="_blank">Download Resume</a>
       </div>
     </div>
   </section>
